@@ -1,14 +1,11 @@
 package fr.uga.miage.m1.model.mapper;
 
-import fr.uga.miage.m1.entity.Commande;
 import fr.uga.miage.m1.entity.CommandePresentation;
-import fr.uga.miage.m1.model.dto.CommandeCompleteDTO;
 import fr.uga.miage.m1.model.dto.PanierPresentationDTO;
 import org.mapstruct.Mapper;
 import org.mapstruct.factory.Mappers;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Mapper(componentModel = "spring")
 public interface CommandeMapper {
@@ -25,7 +22,7 @@ public interface CommandeMapper {
             dto.setPrescriptions(commandePresentation.getPresentation().getMedicament().getPrescriptions());
 
             return dto;
-        }).collect(Collectors.toList());
+        }).toList();
     }
 
 }
